src/test/deca/context/invalid/Objet/type_redef_changed2.deca
// Description:
//    test de faire changer le type de retour d'une méthode dans une classe qui l'hérite
//
// Resultats:
//  22:4: The method is already defined in a super class but  with a diffrent return type
//
// Historique:
//    cree le 20/01/2022

class A  {}
class B {}

class C {
    A a ;
    A get() {
        return a ;
    }
}

class D extends C {
    B b ;
    B get(){
        return b ;
    }
}
{}



